# ScalesBot

./: .gitignore  LICENSE  README.md  pyproject.toml
root_template/: settings.toml
root_template/docker/searxng/: docker-compose.yml  settings.yml
root_template/workflow/: AGENT.MD
root_template/workflow/skills/agent-browser/: SKILL.md
root_template/workspace/: AGENT.MD  USER.MD
root_template/workspace/skills/weather/: SKILL.MD
src/core/: agent.py  config.py  deps.py  log.py  main.py  security.py  setup_project.py  system_prompt.py  util.py
src/providers/: __init__.py  base.py  factory.py  llamacpp.py  openrouter.py  registry.py
src/providers/_internal/: registry.py
src/tools/: __init__.py  registry.py  workflow.py
src/tools/_internal/: base.py  registry.py
src/tools/browser/: tools.py
src/tools/common/: tools.py
src/tools/database/: deps.py  models.py  repo.py  tools.py
src/tools/docker/: deps.py  manager.py  tools.py
src/tools/requests/: deps.py  tools.py
src/tools/skills/: deps.py  models.py  skill_manager.py  tools.py
src/tools/workflow/: models.py  read.py  tools.py
src/tools/workspace/: models.py  tools.py
workflow_template/: USER.MD
workflow_template/skills/reddit/: SKILL.MD
