[project]
name = "myagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "logfire>=4.30.0",
    "loguru>=0.7.3",
    "pydantic-ai>=1.72.0",
    "pydantic-ai-slim[openai,openrouter]>=1.72.0",
    "pydantic-settings>=2.13.1",
]

[project.scripts]
start = "core.main:main"

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/core"]
